docs/spec/grammar/conformance/reject/03-unclosed-brace.myc
// rejected: unbalanced brace — the match block is never closed
nodule bad;
fn f(s: Sign) => Sign =
    match s {
        Pos => s
